force-app/main/default/objects/SBQQ__Theme__c/fields/SBQQ__HeaderIconColor__c.field-meta.xml
<CustomField>
        <fullName>SBQQ__HeaderIconColor__c</fullName>
        <inlineHelpText>Color of page header icon</inlineHelpText>
        <label>Header Icon Color</label>
        <length>23</length>
        <type>Text</type>
    </CustomField>