force-app/main/default/objects/SBQQ__Theme__c/fields/SBQQ__HeaderIconFontSize__c.field-meta.xml
<CustomField>
        <fullName>SBQQ__HeaderIconFontSize__c</fullName>
        <inlineHelpText>Font size of page header icon</inlineHelpText>
        <label>Header Icon Font Size</label>
        <length>10</length>
        <type>Text</type>
    </CustomField>