force-app/main/default/objects/SBQQ__Theme__c/fields/SBQQ__HeaderMinHeight__c.field-meta.xml
<CustomField>
        <fullName>SBQQ__HeaderMinHeight__c</fullName>
        <inlineHelpText>Minimum height of page header</inlineHelpText>
        <label>Header Minimum Height</label>
        <length>10</length>
        <type>Text</type>
    </CustomField>