force-app/main/default/objects/SBQQ__Theme__c/fields/SBQQ__HeaderPaddingBottom__c.field-meta.xml
<CustomField>
        <fullName>SBQQ__HeaderPaddingBottom__c</fullName>
        <inlineHelpText>Bottom padding of page header</inlineHelpText>
        <label>Header Bottom Padding</label>
        <length>10</length>
        <type>Text</type>
    </CustomField>