force-app/main/default/objects/SBQQ__Theme__c/fields/SBQQ__HeaderPaddingLeft__c.field-meta.xml
<CustomField>
        <fullName>SBQQ__HeaderPaddingLeft__c</fullName>
        <inlineHelpText>Left padding of page header</inlineHelpText>
        <label>Header Left Padding</label>
        <length>10</length>
        <type>Text</type>
    </CustomField>