force-app/main/default/objects/SBQQ__Theme__c/fields/SBQQ__HeaderPaddingRight__c.field-meta.xml
<CustomField>
        <fullName>SBQQ__HeaderPaddingRight__c</fullName>
        <inlineHelpText>Right padding of page header</inlineHelpText>
        <label>Header Right Padding</label>
        <length>10</length>
        <type>Text</type>
    </CustomField>