force-app/main/default/objects/SBQQ__Theme__c/fields/SBQQ__HeaderPaddingTop__c.field-meta.xml
<CustomField>
        <fullName>SBQQ__HeaderPaddingTop__c</fullName>
        <inlineHelpText>Top padding of page header</inlineHelpText>
        <label>Header Top Padding</label>
        <length>10</length>
        <type>Text</type>
    </CustomField>