force-app/main/default/objects/SBQQ__Theme__c/fields/SBQQ__HeaderSecondaryFontColor__c.field-meta.xml
<CustomField>
        <fullName>SBQQ__HeaderSecondaryFontColor__c</fullName>
        <inlineHelpText>Font color of page sub-header</inlineHelpText>
        <label>Header Secondary Font Color</label>
        <length>23</length>
        <type>Text</type>
    </CustomField>