force-app/main/default/objects/SBQQ__Theme__c/fields/SBQQ__HeaderSecondaryFontSize__c.field-meta.xml
<CustomField>
        <fullName>SBQQ__HeaderSecondaryFontSize__c</fullName>
        <inlineHelpText>Font size of page sub-header</inlineHelpText>
        <label>Header Secondary Font Size</label>
        <length>10</length>
        <type>Text</type>
    </CustomField>