force-app/main/default/objects/SBQQ__Theme__c/fields/SBQQ__HideIcons__c.field-meta.xml
<CustomField>
        <fullName>SBQQ__HideIcons__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If checked, will hide the icon square located on the left side of custom page headers</description>
        <inlineHelpText>If checked, will hide the icon square located on the left side of page headers</inlineHelpText>
        <label>Hide Icons on Page Headers</label>
        <type>Checkbox</type>
    </CustomField>