force-app/main/default/objects/SBQQ__Theme__c/fields/SBQQ__HyperlinkActiveColor__c.field-meta.xml
<CustomField>
        <fullName>SBQQ__HyperlinkActiveColor__c</fullName>
        <inlineHelpText>Color of active links</inlineHelpText>
        <label>Hyperlink Active Color</label>
        <length>23</length>
        <type>Text</type>
    </CustomField>