force-app/main/default/objects/SBQQ__Theme__c/fields/SBQQ__HyperlinkColor__c.field-meta.xml
<CustomField>
        <fullName>SBQQ__HyperlinkColor__c</fullName>
        <inlineHelpText>Color of links</inlineHelpText>
        <label>Hyperlink Color</label>
        <length>23</length>
        <type>Text</type>
    </CustomField>