force-app/main/default/objects/SBQQ__Theme__c/fields/SBQQ__HyperlinkDisabledColor__c.field-meta.xml
<CustomField>
        <fullName>SBQQ__HyperlinkDisabledColor__c</fullName>
        <inlineHelpText>Color of disabled links</inlineHelpText>
        <label>Hyperlink Disabled Color</label>
        <length>23</length>
        <type>Text</type>
    </CustomField>