force-app/main/default/objects/SBQQ__Theme__c/fields/SBQQ__HyperlinkHoverColor__c.field-meta.xml
<CustomField>
        <fullName>SBQQ__HyperlinkHoverColor__c</fullName>
        <inlineHelpText>Hover color of links</inlineHelpText>
        <label>Hyperlink Hover Color</label>
        <length>23</length>
        <type>Text</type>
    </CustomField>