force-app/main/default/objects/SBQQ__Theme__c/fields/SBQQ__IconDisabledColor__c.field-meta.xml
<CustomField>
        <fullName>SBQQ__IconDisabledColor__c</fullName>
        <inlineHelpText>Color of disabled icons</inlineHelpText>
        <label>Icon Disabled Color</label>
        <length>23</length>
        <type>Text</type>
    </CustomField>