force-app/main/default/objects/SBQQ__Theme__c/fields/SBQQ__IconFontColor__c.field-meta.xml
<CustomField>
        <fullName>SBQQ__IconFontColor__c</fullName>
        <inlineHelpText>Font color of icons</inlineHelpText>
        <label>Icon Font Color</label>
        <length>23</length>
        <type>Text</type>
    </CustomField>