force-app/main/default/objects/SBQQ__Theme__c/fields/SBQQ__IconHoverColor__c.field-meta.xml
<CustomField>
        <fullName>SBQQ__IconHoverColor__c</fullName>
        <inlineHelpText>Hover color of icons</inlineHelpText>
        <label>Icon Hover Color</label>
        <length>23</length>
        <type>Text</type>
    </CustomField>