force-app/main/default/objects/SBQQ__Theme__c/fields/SBQQ__IconMobileCopyBackgroundColor__c.field-meta.xml
<CustomField>
        <fullName>SBQQ__IconMobileCopyBackgroundColor__c</fullName>
        <inlineHelpText>Background color of copy mobile icon</inlineHelpText>
        <label>Mobile Copy Icon Background Color</label>
        <length>23</length>
        <type>Text</type>
    </CustomField>