force-app/main/default/objects/SBQQ__Theme__c/fields/SBQQ__IconMobileDeleteBackgroundColor__c.field-meta.xml
<CustomField>
        <fullName>SBQQ__IconMobileDeleteBackgroundColor__c</fullName>
        <inlineHelpText>Background color of delete mobile icon</inlineHelpText>
        <label>Mobile Delete Icon Background Color</label>
        <length>23</length>
        <type>Text</type>
    </CustomField>