force-app/main/default/objects/SBQQ__Theme__c/fields/SBQQ__IconMobileLineActionColor__c.field-meta.xml
<CustomField>
        <fullName>SBQQ__IconMobileLineActionColor__c</fullName>
        <inlineHelpText>Color of mobile line action icons</inlineHelpText>
        <label>Mobile Line Action Icon Color</label>
        <length>23</length>
        <type>Text</type>
    </CustomField>