force-app/main/default/objects/SBQQ__Theme__c/fields/SBQQ__IconMobileStarBackgroundColor__c.field-meta.xml
<CustomField>
        <fullName>SBQQ__IconMobileStarBackgroundColor__c</fullName>
        <inlineHelpText>Background color of star mobile icon</inlineHelpText>
        <label>Mobile Star Icon Background Color</label>
        <length>23</length>
        <type>Text</type>
    </CustomField>