force-app/main/default/objects/SBQQ__Theme__c/fields/SBQQ__IconMobileStarFillColor__c.field-meta.xml
<CustomField>
        <fullName>SBQQ__IconMobileStarFillColor__c</fullName>
        <inlineHelpText>Fill color of star mobile icon</inlineHelpText>
        <label>Mobile Star Icon Fill Color</label>
        <length>23</length>
        <type>Text</type>
    </CustomField>