force-app/main/default/objects/SBQQ__Theme__c/fields/SBQQ__IconMobileWandBackgroundColor__c.field-meta.xml
<CustomField>
        <fullName>SBQQ__IconMobileWandBackgroundColor__c</fullName>
        <inlineHelpText>Background color of wand mobile icon</inlineHelpText>
        <label>Mobile Wand Icon Background Color</label>
        <length>23</length>
        <type>Text</type>
    </CustomField>