force-app/main/default/objects/SBQQ__Theme__c/fields/SBQQ__IconPageLoadingColor__c.field-meta.xml
<CustomField>
        <fullName>SBQQ__IconPageLoadingColor__c</fullName>
        <inlineHelpText>Color of page loading icon</inlineHelpText>
        <label>Page Loading Icon Color</label>
        <length>23</length>
        <type>Text</type>
    </CustomField>