force-app/main/default/objects/SBQQ__Theme__c/fields/SBQQ__InputOutlineWidth__c.field-meta.xml
<CustomField>
        <fullName>SBQQ__InputOutlineWidth__c</fullName>
        <inlineHelpText>Outline width of input forms on focus</inlineHelpText>
        <label>Input Outline Width</label>
        <length>10</length>
        <type>Text</type>
    </CustomField>