force-app/main/default/objects/SBQQ__Theme__c/fields/SBQQ__LoadingMaskColor__c.field-meta.xml
<CustomField>
        <fullName>SBQQ__LoadingMaskColor__c</fullName>
        <inlineHelpText>Color of loading mask when navigating to a new page</inlineHelpText>
        <label>Loading Mask Color</label>
        <length>23</length>
        <type>Text</type>
    </CustomField>