force-app/main/default/objects/SBQQ__Theme__c/fields/SBQQ__NavigationDrawerColor__c.field-meta.xml
<CustomField>
        <fullName>SBQQ__NavigationDrawerColor__c</fullName>
        <inlineHelpText>Background color of navigation side panels</inlineHelpText>
        <label>Navigation Drawer Color</label>
        <length>23</length>
        <type>Text</type>
    </CustomField>