force-app/main/default/objects/SBQQ__Theme__c/fields/SBQQ__NavigationDrawerFontColor__c.field-meta.xml
<CustomField>
        <fullName>SBQQ__NavigationDrawerFontColor__c</fullName>
        <inlineHelpText>Font color of navigation side panels</inlineHelpText>
        <label>Navigation Drawer Font Color</label>
        <length>23</length>
        <type>Text</type>
    </CustomField>