force-app/main/default/objects/SBQQ__Theme__c/fields/SBQQ__NavigationDrawerHeaderColor__c.field-meta.xml
<CustomField>
        <fullName>SBQQ__NavigationDrawerHeaderColor__c</fullName>
        <inlineHelpText>Background color of navigation side panel headers</inlineHelpText>
        <label>Navigation Drawer Header Color</label>
        <length>23</length>
        <type>Text</type>
    </CustomField>