force-app/main/default/objects/SBQQ__Theme__c/fields/SBQQ__NavigationDrawerHeaderFontColor__c.field-meta.xml
<CustomField>
        <fullName>SBQQ__NavigationDrawerHeaderFontColor__c</fullName>
        <inlineHelpText>Font color of navigation side panel headers</inlineHelpText>
        <label>Navigation Drawer Header Font Color</label>
        <length>23</length>
        <type>Text</type>
    </CustomField>