force-app/main/default/objects/SBQQ__Theme__c/fields/SBQQ__NavigationDrawerRowColor__c.field-meta.xml
<CustomField>
        <fullName>SBQQ__NavigationDrawerRowColor__c</fullName>
        <inlineHelpText>Background color of rows in navigation side panels</inlineHelpText>
        <label>Navigation Drawer Row Color</label>
        <length>23</length>
        <type>Text</type>
    </CustomField>