force-app/main/default/objects/SBQQ__Theme__c/fields/SBQQ__NavigationDrawerRowHoverColor__c.field-meta.xml
<CustomField>
        <fullName>SBQQ__NavigationDrawerRowHoverColor__c</fullName>
        <inlineHelpText>Background color of hovered rows in navigation side panels</inlineHelpText>
        <label>Navigation Drawer Row Hover Color</label>
        <length>23</length>
        <type>Text</type>
    </CustomField>