force-app/main/default/objects/SBQQ__Theme__c/fields/SBQQ__NavigationDrawerRowSelectedColor__c.field-meta.xml
<CustomField>
        <fullName>SBQQ__NavigationDrawerRowSelectedColor__c</fullName>
        <inlineHelpText>Background color of selected row in navigation side panels</inlineHelpText>
        <label>Navigation Drawer Row Selected Color</label>
        <length>23</length>
        <type>Text</type>
    </CustomField>