force-app/main/default/objects/SBQQ__Theme__c/fields/SBQQ__ParentLineRowFontColor__c.field-meta.xml
<CustomField>
        <fullName>SBQQ__ParentLineRowFontColor__c</fullName>
        <inlineHelpText>Font color of parent line rows in quote line editor</inlineHelpText>
        <label>Parent Line Row Font Color</label>
        <length>23</length>
        <type>Text</type>
    </CustomField>