force-app/main/default/objects/SBQQ__Theme__c/fields/SBQQ__PrimaryButtonColor__c.field-meta.xml
<CustomField>
        <fullName>SBQQ__PrimaryButtonColor__c</fullName>
        <inlineHelpText>Color of brand buttons</inlineHelpText>
        <label>Brand Button Color</label>
        <length>23</length>
        <type>Text</type>
    </CustomField>