force-app/main/default/objects/SBQQ__Theme__c/fields/SBQQ__PrimaryButtonFontColor__c.field-meta.xml
<CustomField>
        <fullName>SBQQ__PrimaryButtonFontColor__c</fullName>
        <inlineHelpText>Font color of brand buttons</inlineHelpText>
        <label>Brand Button Font Color</label>
        <length>23</length>
        <type>Text</type>
    </CustomField>