force-app/main/default/objects/SBQQ__Theme__c/fields/SBQQ__PrimaryButtonHoverColor__c.field-meta.xml
<CustomField>
        <fullName>SBQQ__PrimaryButtonHoverColor__c</fullName>
        <inlineHelpText>Hover color of brand buttons</inlineHelpText>
        <label>Brand Button Hover Color</label>
        <length>23</length>
        <type>Text</type>
    </CustomField>