force-app/main/default/objects/SBQQ__Theme__c/fields/SBQQ__RadioButtonColorChecked__c.field-meta.xml
<CustomField>
        <fullName>SBQQ__RadioButtonColorChecked__c</fullName>
        <inlineHelpText>Color of selected radio button</inlineHelpText>
        <label>Radio Button Color Checked</label>
        <length>23</length>
        <type>Text</type>
    </CustomField>