force-app/main/default/objects/SBQQ__Theme__c/fields/SBQQ__RadioButtonColorUnchecked__c.field-meta.xml
<CustomField>
        <fullName>SBQQ__RadioButtonColorUnchecked__c</fullName>
        <inlineHelpText>Color of unselected radio button</inlineHelpText>
        <label>Radio Button Color Unchecked</label>
        <length>23</length>
        <type>Text</type>
    </CustomField>