force-app/main/default/objects/SBQQ__Theme__c/fields/SBQQ__SecondaryFontColor__c.field-meta.xml
<CustomField>
        <fullName>SBQQ__SecondaryFontColor__c</fullName>
        <label>Secondary Font Color</label>
        <length>23</length>
        <type>Text</type>
    </CustomField>