force-app/main/default/objects/SBQQ__Theme__c/fields/SBQQ__SecondaryHeaderColor__c.field-meta.xml
<CustomField>
        <fullName>SBQQ__SecondaryHeaderColor__c</fullName>
        <label>Secondary Header Color</label>
        <length>23</length>
        <type>Text</type>
    </CustomField>