force-app/main/default/objects/SBQQ__Theme__c/fields/SBQQ__SelectBorderColor__c.field-meta.xml
<CustomField>
        <fullName>SBQQ__SelectBorderColor__c</fullName>
        <inlineHelpText>Border color of drop-down menus</inlineHelpText>
        <label>Picklist Border Color</label>
        <length>23</length>
        <type>Text</type>
    </CustomField>