force-app/main/default/objects/SBQQ__Theme__c/fields/SBQQ__SelectBorderRadius__c.field-meta.xml
<CustomField>
        <fullName>SBQQ__SelectBorderRadius__c</fullName>
        <inlineHelpText>Border radius of drop-down menus</inlineHelpText>
        <label>Picklist Border Radius</label>
        <length>10</length>
        <type>Text</type>
    </CustomField>