force-app/main/default/objects/SBQQ__Theme__c/fields/SBQQ__SelectBorderWidth__c.field-meta.xml
<CustomField>
        <fullName>SBQQ__SelectBorderWidth__c</fullName>
        <inlineHelpText>Border width of drop-down menus</inlineHelpText>
        <label>Picklist Border Width</label>
        <length>10</length>
        <type>Text</type>
    </CustomField>