force-app/main/default/objects/SBQQ__Theme__c/fields/SBQQ__SelectContractHideSkipActionOnAddOn__c.field-meta.xml
<CustomField>
        <fullName>SBQQ__SelectContractHideSkipActionOnAddOn__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If checked, will hide the Skip action button on the contract selector page for add-on workflow</description>
        <inlineHelpText>If checked, will hide the Skip action button on the contract selector page for add-on workflow</inlineHelpText>
        <label>Hide Skip Action (Add-on Workflow)</label>
        <type>Checkbox</type>
    </CustomField>