force-app/main/default/objects/SBQQ__Theme__c/fields/SBQQ__SelectHeight__c.field-meta.xml
<CustomField>
        <fullName>SBQQ__SelectHeight__c</fullName>
        <inlineHelpText>Height of drop-down menus</inlineHelpText>
        <label>Picklist Border Height</label>
        <length>10</length>
        <type>Text</type>
    </CustomField>