force-app/main/default/objects/SBQQ__Theme__c/fields/SBQQ__SelectPaddingBottom__c.field-meta.xml
<CustomField>
        <fullName>SBQQ__SelectPaddingBottom__c</fullName>
        <inlineHelpText>Bottom padding of drop-down menus</inlineHelpText>
        <label>Picklist Bottom Padding</label>
        <length>10</length>
        <type>Text</type>
    </CustomField>