force-app/main/default/objects/SBQQ__Theme__c/fields/SBQQ__SelectPaddingLeft__c.field-meta.xml
<CustomField>
        <fullName>SBQQ__SelectPaddingLeft__c</fullName>
        <inlineHelpText>Left padding of drop-down menus</inlineHelpText>
        <label>Picklist Left Padding</label>
        <length>10</length>
        <type>Text</type>
    </CustomField>