force-app/main/default/objects/SBQQ__Theme__c/fields/SBQQ__SelectPaddingRight__c.field-meta.xml
<CustomField>
        <fullName>SBQQ__SelectPaddingRight__c</fullName>
        <inlineHelpText>Right padding of drop-down menus</inlineHelpText>
        <label>Picklist Right Padding</label>
        <length>10</length>
        <type>Text</type>
    </CustomField>