force-app/main/default/objects/SBQQ__Theme__c/fields/SBQQ__SelectPaddingTop__c.field-meta.xml
<CustomField>
        <fullName>SBQQ__SelectPaddingTop__c</fullName>
        <inlineHelpText>Top padding of drop-down menus</inlineHelpText>
        <label>Picklist Top Padding</label>
        <length>10</length>
        <type>Text</type>
    </CustomField>