force-app/main/default/objects/SBQQ__Theme__c/fields/SBQQ__StandaloneProductRowFontColor__c.field-meta.xml
<CustomField>
        <fullName>SBQQ__StandaloneProductRowFontColor__c</fullName>
        <inlineHelpText>Font color of standalone product rows in quote line editor</inlineHelpText>
        <label>Standalone Product Row Font Color</label>
        <length>23</length>
        <type>Text</type>
    </CustomField>